--- a/cmd/risinfo/BUILD.bazel
+++ b/cmd/risinfo/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     deps = [
         "@com_github_osrg_gobgp//pkg/packet/bgp:go_default_library",
         "@com_github_osrg_gobgp//pkg/packet/mrt:go_default_library",
+        "@io_k8s_klog_v2//:go_default_library",
     ],
 )
 
