--- a/pb/BUILD.bazel
+++ b/pb/BUILD.bazel
@@ -10,7 +10,7 @@ proto_library(
 
 go_proto_library(
     name = "netmeta_go_proto",
-    importpath = "github.com/leoluk/NetMeta/pb",
+    importpath = "github.com/monogon-dev/NetMeta/pb",
     proto = ":netmeta_proto",
     visibility = ["//visibility:public"],
 )
@@ -18,6 +18,6 @@ go_proto_library(
 go_library(
     name = "go_default_library",
     embed = [":netmeta_go_proto"],
-    importpath = "github.com/leoluk/NetMeta/pb",
+    importpath = "github.com/monogon-dev/NetMeta/pb",
     visibility = ["//visibility:public"],
 )
