feat: build Go images static
Change-Id: Ia76e8047d7fc665d5e428b7f6b29d4a7246070bc
Reviewed-on: https://review.monogon.dev/c/NetMeta/+/1008
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/cmd/helloworld/BUILD
+++ b/cmd/helloworld/BUILD
@@ -1,15 +1,9 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_docker//go:image.bzl", "go_image")
-
-go_library(
-    name = "go_default_library",
-    srcs = ["helloworld.go"],
-    importpath = "github.com/monogon-dev/NetMeta/cmd/helloworld",
-    visibility = ["//visibility:private"],
-)
 
 go_image(
     name = "helloworld",
-    embed = [":go_default_library"],
+    srcs = ["helloworld.go"],
+    importpath = "github.com/monogon-dev/NetMeta/cmd/helloworld",
+    static = "on",
     visibility = ["//visibility:public"],
 )
