--- a/.bazelrc
+++ b/.bazelrc
@@ -1,5 +1,4 @@
 build --incompatible_use_python_toolchains
 test --incompatible_use_python_toolchains
 
-# Enable ClickHouse support in golang-migrate
-build --define gotags=clickhouse
+build --@io_bazel_rules_go//go/config:static
