--- a/cmd/portmirror/BUILD
+++ b/cmd/portmirror/BUILD
@@ -1,11 +1,15 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_docker//go:image.bzl", "go_image")
 
-go_library(
-    name = "go_default_library",
-    srcs = ["portmirror.go","frame.go","iface.go"],
+go_image(
+    name = "portmirror",
+    srcs = [
+        "frame.go",
+        "iface.go",
+        "portmirror.go",
+    ],
     importpath = "github.com/monogon-dev/NetMeta/cmd/portmirror",
-    visibility = ["//visibility:private"],
+    static = "on",
+    visibility = ["//visibility:public"],
     deps = [
         "@com_github_cloudflare_goflow_v3//pb:go_default_library",
         "@com_github_cloudflare_goflow_v3//transport:go_default_library",
@@ -15,10 +19,4 @@ go_library(
         "@com_github_sirupsen_logrus//:go_default_library",
         "@com_github_vishvananda_netlink//:go_default_library",
     ],
-)
-
-go_image(
-    name = "portmirror",
-    embed = [":go_default_library"],
-    visibility = ["//visibility:public"],
 )
