feat: Replace goflow with goflow2
Change-Id: Ie6f3111db6a031e89af65f48a94197a5cb3e2f03
Reviewed-on: https://review.monogon.dev/c/NetMeta/+/1265
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/cmd/reconciler/BUILD.bazel
+++ b/cmd/reconciler/BUILD.bazel
@@ -14,8 +14,8 @@ go_image(
     static = "on",
     visibility = ["//visibility:public"],
     deps = [
-        "@com_github_clickhouse_clickhouse_go_v2//:go_default_library",
-        "@com_github_emicklei_proto//:go_default_library",
-        "@com_github_huandu_go_sqlbuilder//:go_default_library",
+        "@com_github_clickhouse_clickhouse_go_v2//:clickhouse-go",
+        "@com_github_emicklei_proto//:proto",
+        "@com_github_huandu_go_sqlbuilder//:go-sqlbuilder",
     ],
 )
