--- a/cmd/portmirror/BUILD
+++ b/cmd/portmirror/BUILD
@@ -11,12 +11,15 @@ go_image(
     static = "on",
     visibility = ["//visibility:public"],
     deps = [
-        "@com_github_cloudflare_goflow_v3//pb:go_default_library",
-        "@com_github_cloudflare_goflow_v3//transport:go_default_library",
-        "@com_github_google_gopacket//:go_default_library",
-        "@com_github_google_gopacket//afpacket:go_default_library",
-        "@com_github_google_gopacket//layers:go_default_library",
-        "@com_github_sirupsen_logrus//:go_default_library",
-        "@com_github_vishvananda_netlink//:go_default_library",
+        "@com_github_google_gopacket//:gopacket",
+        "@com_github_google_gopacket//afpacket",
+        "@com_github_google_gopacket//layers",
+        "@com_github_netsampler_goflow2//format:go_default_library",
+        "@com_github_netsampler_goflow2//format/protobuf:go_default_library",
+        "@com_github_netsampler_goflow2//pb:go_default_library",
+        "@com_github_netsampler_goflow2//transport:go_default_library",
+        "@com_github_netsampler_goflow2//transport/kafka:go_default_library",
+        "@com_github_sirupsen_logrus//:logrus",
+        "@com_github_vishvananda_netlink//:netlink",
     ],
 )
