--- a/cmd/risinfo/BUILD.bazel
+++ b/cmd/risinfo/BUILD.bazel
@@ -7,8 +7,8 @@ go_image(
     static = "on",
     visibility = ["//visibility:public"],
     deps = [
-        "@com_github_osrg_gobgp//pkg/packet/bgp:go_default_library",
-        "@com_github_osrg_gobgp//pkg/packet/mrt:go_default_library",
-        "@io_k8s_klog_v2//:go_default_library",
+        "@com_github_osrg_gobgp//pkg/packet/bgp",
+        "@com_github_osrg_gobgp//pkg/packet/mrt",
+        "@io_k8s_klog_v2//:klog",
     ],
 )
