feat: Add Github Actions to build images
Change-Id: Ia37ecd8e2fa2f04ef926259425905e0687b1e8d5
Reviewed-on: https://review.monogon.dev/c/NetMeta/+/1233
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/.bazelrc
+++ b/.bazelrc
@@ -2,3 +2,6 @@ build --incompatible_use_python_toolchains
 test --incompatible_use_python_toolchains
 
 build --@io_bazel_rules_go//go/config:static
+
+build --stamp
+build --workspace_status_command scripts/print-workspace-status.sh
